--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
+#idea ignore
+*.idea**
+*.iml
+atlassian-ide-plugin.xml
+
+# generic files to ignore
+*~
+*.lock
+*.DS_Store
+*.swp
+*.out
+
+# maven
+*/target/**
+target/
+
 # built application files
 *.apk
 *.ap_
@@ -14,3 +30,7 @@ gen/
 
 # Local configuration file (sdk path, etc)
 local.properties
+
+# Eclipse project files
+.classpath
+.project
